# cookiecutter-rsc3128-pypackage

./: README.md  add_hook.py  build.py  cookiecutter.json  hooks.py  template.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.package_name}}/: .gitignore  README.md  setup.cfg
{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/: __init__.py
