[metadata]
name = {{ cookiecutter.package_name }}
version = attr: {{ cookiecutter.package_name }}.__version__
description = {{ cookiecutter.package_description }}
author = {{ cookiecutter.gitbucket_username }}
author_email = {{ cookiecutter.shimadzu_email }}
url = {{ cookiecutter.origin }}
 
[options]
package_dir = =src
packages = find:
install_requires =
    setuptools
 
[options.packages.find]
where = src

[options.package_data]
* = *.txt, *.rst, *.md

[options.entry_points]
console_scripts = 
    {{ cookiecutter.package_name }} = {{ cookiecutter.package_name }}:main